vlib/v/checker/tests/oct_lit_without_digit_err.out
vlib/v/checker/tests/oct_lit_without_digit_err.v:2:14: error: number part of this octal is not provided
    1 | fn main() {
    2 |     println(0o)
      |              ^
    3 | }
