vlib/v/checker/tests/oct_lit_without_digit_err.vv
fn main() {
    println(0o)
}
